--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-asgiref==3.2.7
-Django==3.0.6
+asgiref==3.2.9
+bcrypt==3.1.7
+cffi==1.14.0
+cryptography==2.9.2
+Django==3.0.7
 gunicorn==20.0.4
 mysqlclient==1.4.6
+paramiko==2.7.1
+pycparser==2.20
+PyNaCl==1.4.0
 python-decouple==3.3
 pytz==2020.1
+six==1.15.0
 sqlparse==0.3.1
 whitenoise==5.1.0
