--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,27 @@
-asgiref==3.2.9
-bcrypt==3.1.7
-cffi==1.14.0
-cryptography==2.9.2
-Django==3.0.7
+asgiref==3.3.1
+bcrypt==3.2.0
+cffi==1.14.3
+cryptography==3.2.1
+defusedxml==0.6.0
+diff-match-patch==20200713
+Django==3.1.3
+django-import-export==2.4.0
+et-xmlfile==1.0.1
 gunicorn==20.0.4
-mysqlclient==1.4.6
-paramiko==2.7.1
+jdcal==1.4.1
+MarkupPy==1.14
+mysqlclient==2.0.1
+odfpy==1.4.1
+openpyxl==3.0.5
+paramiko==2.7.2
 pycparser==2.20
 PyNaCl==1.4.0
 python-decouple==3.3
-pytz==2020.1
+pytz==2020.4
+PyYAML==5.3.1
 six==1.15.0
-sqlparse==0.3.1
+sqlparse==0.4.1
+tablib==2.0.0
 whitenoise==5.1.0
+xlrd==1.2.0
+xlwt==1.3.0
